2004-08-15  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* ext/lame/gstlame.c: (gst_lame_vbrmode_get_type),
	(gst_lame_preset_get_type), (gst_lame_class_init):
	describe the enum values for vbr mode and presets more verbosely

2004-08-13  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* ext/lame/gstlame.c: (gst_lame_mode_get_type),
	(gst_lame_quality_get_type), (gst_lame_padding_get_type),
	(gst_lame_preset_get_type), (gst_lame_class_init), (gst_lame_init),
	(gst_lame_set_property), (gst_lame_get_property), (gst_lame_setup):
	* ext/lame/gstlame.h:
	add preset property to lame so it can use lame presets

2004-08-13  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* ext/lame/gstlame.c: (gst_lame_get_property):
	whoops forgot break, thanks teuf

2004-08-13  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* ext/lame/gstlame.c: (gst_lame_vbrmode_get_type),
	(gst_lame_class_init), (gst_lame_src_getcaps),
	(gst_lame_sink_link), (gst_lame_init), (gst_lame_set_property),
	(gst_lame_get_property), (gst_lame_setup):
	* ext/lame/gstlame.h:
	fix lame's broken vbr stuff, allow it to resample if need be, and also 
	make xing header optional

2004-08-12  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* ext/lame/gstlame.c: (gst_lame_src_getcaps), (gst_lame_init):
	added getcaps function so samplerate doesnt get fixated to silly values

2004-08-12  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* ext/lame/gstlame.c: (gst_lame_src_link):
	revert previous fix

2004-08-12  Johan Dahlin  <johan@gnome.org>

	* sys/v4l/gstv4lelement.c (gst_v4l_iface_supported): Remove bogus
	checks. Doesn't matter what state we are in. Interfaces are a
	compile time thing, not runtime. It also broke the python bindings.

2004-08-12  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* ext/lame/gstlame.c: (gst_lame_src_link):
	made source pad link function check if sinkpad is ok..fixes the problem
	where core fixates the output rate of lame stupidly
